force-app/main/default/objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <label>Vendor</label>
    <nameField>
        <displayFormat>VEN-{0000}</displayFormat>
        <label>Vendor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>