force-app/main/default/objects/Vendor__c/fields/Award_Status__c.field-meta.xml
<CustomField>
    <fullName>Award_Status__c</fullName>
    <label>Award Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>