force-app/main/default/objects/Vendor__c/fields/Lost_Count__c.field-meta.xml
<CustomField>
    <fullName>Lost_Count__c</fullName>
    <formula>IF(ISPICKVAL( Award_Status__c ,&quot;Lost&quot;),1,
IF(ISPICKVAL(Award_Status__c ,&quot;Won&quot;),0,
Null))</formula>
    <label>Lost Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>