force-app/main/default/objects/Vendor__c/fields/Opp_Team_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Team_ID__c</fullName>
    <label>Opp Team ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>