force-app/main/default/objects/Vendor__c/fields/Won_Count__c.field-meta.xml
<CustomField>
    <fullName>Won_Count__c</fullName>
    <formula>IF(ISPICKVAL( Award_Status__c ,&quot;Won&quot;),1,
IF(ISPICKVAL( Award_Status__c ,&quot;Lost&quot;),0,
NULL))</formula>
    <label>Won Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>